- Reduce amount of data gathered from BL for the Node Overview   (exclude_automatic_assertions=true, unselect_evidence=true). - Use the same darkened link_color throughout the app, as opposed to   only darkening the AssocTable rows - Handle errors where an entity appears to have no superclasses   (probably due to a backend data error). - Make taxon label a link - Increase spacing between a Node's id, taxon, and name. - For genes, ensure that the gene's label doesn't duplicate an existing   synonym before adding it to the synonyms list. - Clear inheritance and modifiers when navigating from one node to   another (previously, those variables were ending up with leftover values). - Simplify code in Node.vue. Eliminate applyResponse() to allow   fetchData() to be refactored more easily. - Handle cases where Entrez is returning null. - Fix vertical alignment of checkbox with taxon label in facets. - Add disclosable triangle to support button. - Move the entity id and external URL into the References section. - Ensure that Equivalent Ids are shown for genes/variants. - Add a light background to node description. - Add padding to synonyms div to avoid horizontal scroll. - Other minor UI cleanup.

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -7,7 +7,7 @@ $font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $sidebar-collapse-width: 800px;
 $grid-float-breakpoint: 600px;
 
-$link-color: #0088ce;
+$link-color: darken(#4285f4, 20%); // #0088dd; // #1a0dab; // #0088ce; // #4285f4;
 
 $monarch-bg-color: #15556A;
 $home-section-light-bg: white;
